--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Blog
-subtitle: Hitchhiker's guid to web development
+subtitle: <a href="https://github.com/yinyurr/HerLittleMonsterPri/blob/2c569f50f58599b071509cd78580acfed51e4caf/081.markdown">yy's guid to web development</a>
 sitemap:
   priority: 0.9
 ---
